// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should render without crashing 1`] = `
<div>
  <div
    class="tile__container"
    style="background-color: rgb(255, 255, 255);"
  >
    <a
      href="/blog/abc123"
    >
      <div
        class="tile"
      >
        <div
          class="tile__bg tile__bg--left tile__fragment--show"
          style="background-color: rgb(255, 255, 255);"
        />
        <div
          class="tile__bg tile__bg--top tile__fragment--show"
          style="background-color: rgb(255, 255, 255);"
        />
        <div
          class="tile__bg tile__bg--right tile__fragment--show"
          style="background-color: rgb(255, 255, 255);"
        />
        <div
          class="tile_content"
        >
          <div
            class="tile__border tile__border--left tile__fragment--show"
          />
          <div
            class="tile__border tile__border--top tile__fragment--show"
          />
          <div
            class="tile__border tile__border--right tile__fragment--show"
          />
          <div
            class="tile__image"
          >
            <img
              alt=""
              src="/foo_bar.jpg"
            />
          </div>
          <div
            class="tile_title"
          >
            <span>
              Zaloguj się i Tytuł kafelka
            </span>
          </div>
        </div>
      </div>
    </a>
    <div
      class="tile__button__container"
    >
      <button
        class="tile__button tile__button__edit btn btn-primary btn-sm"
        type="button"
      >
        <img
          alt="Edytuj"
          class="tile__button__edit__icon"
          src="/editicon.svg"
        />
      </button>
      <button
        class="tile__button tile__button__delete btn btn-danger btn-sm"
        type="button"
      >
        <img
          alt="Usuń"
          class="tile__button__delete__icon"
          src="/deleteicon.svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Tile should render without crashing when showImage object is empty 1`] = `
<div>
  <div
    class="tile__container"
    style="background-color: rgb(255, 255, 255);"
  >
    <a
      href="/blog/abc123"
    >
      <div
        class="tile"
      >
        <div
          class="tile__bg tile__bg--left "
          style="background-color: rgb(255, 255, 255);"
        />
        <div
          class="tile__bg tile__bg--top "
          style="background-color: rgb(255, 255, 255);"
        />
        <div
          class="tile__bg tile__bg--right "
          style="background-color: rgb(255, 255, 255);"
        />
        <div
          class="tile_content"
        >
          <div
            class="tile__border tile__border--left "
          />
          <div
            class="tile__border tile__border--top "
          />
          <div
            class="tile__border tile__border--right "
          />
          <div
            class="tile__image"
          >
            <img
              alt=""
              src="/foo_bar.jpg"
            />
          </div>
          <div
            class="tile_title"
          >
            <span>
              Zaloguj się i Tytuł kafelka
            </span>
          </div>
        </div>
      </div>
    </a>
    <div
      class="tile__button__container"
    >
      <button
        class="tile__button tile__button__edit btn btn-primary btn-sm"
        type="button"
      >
        <img
          alt="Edytuj"
          class="tile__button__edit__icon"
          src="/editicon.svg"
        />
      </button>
      <button
        class="tile__button tile__button__delete btn btn-danger btn-sm"
        type="button"
      >
        <img
          alt="Usuń"
          class="tile__button__delete__icon"
          src="/deleteicon.svg"
        />
      </button>
    </div>
  </div>
</div>
`;
